--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -162,6 +162,35 @@ input {
     cursor: pointer;
 }
 
+.sort-btn-flex {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+.sort-btn-flex .sort-btn {
+    width: 400px;
+    height: 80px;
+    margin-bottom: 75px;
+    font-size: 35px;
+    background-color: #181818;
+    color: #e7165f;
+    box-shadow: 0 0 0 0.2rem #f7b402;
+    border-radius: 5px;
+    font-family: 'Poppins';
+    text-align:center
+}
+
+.sort-btn:hover {
+    background: #f7b402;
+    color: black;  
+    border: #f7b402;  
+}
+
+.sort-btn:focus {
+    outline: 0;
+}
+
 .floating-btn-flex {
     display: flex;
     justify-content: right;
